# QR-Reward-System

./: package-lock.json
backend/: campaigns_database.json  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
qr-reward-frontend/: README.md  package-lock.json  package.json
qr-reward-frontend/src/: AdminDashboard.js  App.js  ClaimPage.js  LoginPage.js  firebase.js
